--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Расскажи анекдот</title>
+    <title>Курсы</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: linear-gradient(120deg, #0044cc, #800000);
+            font-family: Arial, sans-serif;
+        }
+        .button {
+            padding: 20px 40px;
+            margin: 15px;
+            border: none;
+            border-radius: 10px;
+            background-color: #ffffff;
+            color: #800000;
+            font-size: 1.5em;
+            cursor: pointer;
+            transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .button:hover {
+            background-color: #800000;
+            color: #ffffff;
+            transform: scale(1.1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 <body>
-    <h1>Нажмите кнопку, чтобы услышать анекдот</h1>
-    <button onclick="showJoke()">Расскажи анекдот</button>
-    <p id="joke"></p>
+    <button class="button" onclick="showPrice('Курсы Медитации')">Курсы Медитации</button>
+    <button class="button" onclick="showPrice('Курсы Успешного Успеха')">Курсы Успешного Успеха</button>
 
     <script>
-        function showJoke() {
-            // Здесь можно добавить код для загрузки анекдота с помощью API
-            document.getElementById("joke").innerHTML = "Здесь будет ваш анекдот";
+        function showPrice(courseName) {
+            alert(courseName + ' стоит 2 млн евро');
         }
     </script>
 </body>
