--- a/index.html
+++ b/index.html
@@ -32,15 +32,71 @@
             transform: scale(1.1);
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            background-color: #fefefe;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 80%;
+            max-width: 400px;
+            text-align: center;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .modal-input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1.1em;
+        }
     </style>
 </head>
 <body>
-    <button class="button" onclick="showPrice('Курсы Медитации')">Курсы Медитации</button>
-    <button class="button" onclick="showPrice('Курсы Успешного Успеха')">Курсы Успешного Успеха</button>
+    <button class="button" onclick="showModal('Курсы Медитации')">Курсы Медитации</button>
+    <button class="button" onclick="showModal('Курсы Успешного Успеха')">Курсы Успешного Успеха</button>
+
+    <div id="paymentModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2 id="courseTitle">Оплата курса</h2>
+            <p>Введите номер карты для оплаты 2 000 000 €</p>
+            <input type="text" class="modal-input" placeholder="Номер карты">
+            <button class="button" style="width: 100%;">Оплатить</button>
+        </div>
+    </div>
 
     <script>
-        function showPrice(courseName) {
-            alert(courseName + ' стоит 2 млн евро');
+        function showModal(courseName) {
+            document.getElementById('courseTitle').innerText = 'Оплата курса: ' + courseName;
+            document.getElementById('paymentModal').style.display = 'flex';
+        }
+        
+        function closeModal() {
+            document.getElementById('paymentModal').style.display = 'none';
         }
     </script>
 </body>
